Fix mobile backdrop flicker

--- a/css/view.css
+++ b/css/view.css
@@ -15,6 +15,10 @@
     transform: translateY(100vh);
   }
 
+  &::backdrop {
+    display: none;
+  }
+
   .view {
     display: flex;
     flex-direction: column;
@@ -144,6 +148,7 @@
     border-radius: var(--interface-radius);
 
     &::backdrop {
+      display: block;
       background-color: var(--col-backdrop);
     }
   }
